--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,188 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Permanent+Marker&display=swap");
+
 .App {
-  text-align: center;
+  max-width: 1200px;
+  min-width: 800px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  position: static;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+
+  height: 40px;
+  margin: 5px 10px;
+  padding: 8px 50px;
+  border-radius: 15px;
+  background: #242e8a;
+
+  font-family: "Permanent Marker", cursive;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header h1 {
+  font-size: 20px;
+  margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header p {
+  margin: 5px;
+}
+
+.addTodo {
+  height: 60px;
+  margin: 5px 10px;
+  padding: 8px 50px;
+  border-radius: 15px;
+  background: #afafaf;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "IBM Plex Sans KR", sans-serif;
+}
+
+.inputArea {
+  display: flex;
+  gap: 20px;
+}
+
+.inputArea input {
+  width: 250px;
+  height: 25px;
+  margin-left: 10px;
+
+  border: 1px #8b8686;
+  border-radius: 10px;
+  background: #d9d9d9;
+}
+
+.inputArea input:focus {
+  outline: 2px solid #00109e;
+}
+
+.titleArea,
+.bodyArea {
+  display: flex;
+  margin: 10px 0;
+}
+.titleArea p,
+.bodyArea p {
+  margin: 5px 0;
+}
+
+#addBtn {
+  width: 150px;
+  height: 30px;
+
+  border: none;
+  border-radius: 10px;
+  background: #0c1881;
+
+  color: white;
+}
+
+#addBtn:hover {
+  background: white;
+  color: #242e8a;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#todoList {
+  margin: 15px 20px;
+  font-family: "IBM Plex Sans KR", sans-serif;
+}
+
+#todoList h2 {
+  font-family: "Permanent Marker", cursive;
+  font-size: 36px;
+}
+
+#undoArea,
+#doneArea {
+  margin-bottom: 80px;
+}
+
+#undoList,
+#doneList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
+  row-gap: 20px;
+}
+
+.todoBox {
+  width: 255px;
+  height: 200px;
+
+  margin-right: 20px;
+  padding: 5px 15px;
+
+  border-radius: 20px;
+  border: 2px solid #242e8a;
+  background: #fff;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.contentBox {
+  padding: 5px;
+}
+
+.title {
+  margin: 10px 5px;
+}
+
+.boxBody {
+  width: 255px;
+  height: 80px;
+  margin: 10px 0;
+}
+
+.btns {
+  text-align: center;
+}
+
+.btns button {
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid #afafaf;
+  background: #fff;
+}
+
+.btns button:hover {
+  background: #242e8a;
+  color: white;
+  cursor: pointer;
+}
+
+@media (max-width: 950px) {
+  #undoList,
+  #doneList {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    row-gap: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .addTodo {
+    height: 60px;
+    margin: 5px 10px;
+    padding: 8px 50px;
+    border-radius: 15px;
+    background: #afafaf;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "IBM Plex Sans KR", sans-serif;
+  }
+
+  .inputArea input {
+    width: 180px;
+    height: 25px;
+    margin-left: 10px;
   }
 }
